# sistema-refeicoes

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  OPERATIONS.md  PLAN.md  Procfile  README.md  app.py  config.py  docker-compose.yml  gitignore  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  sistema.db  sistema_refeicoes_v8_4.py
core/: __init__.py  absences.py  analytics.py  audit.py  auth_db.py  autofill.py  backup.py  bootstrap.py  calendar.py  checkin.py  companhias.py  constants.py  database.py  detencoes.py  exports.py  forecast.py  meals.py  menus.py  middleware.py  migrations.py  notifications.py  operations.py  qr.py  rate_limit.py  schema.py  users.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_MACOS.md  RUNBOOK.md  USER_MANUAL.md
scripts/: init_db.py  preflight.sh  seed_demo.py  smoke_test.sh
static/: manifest.json  sw.js
templates/: _macros.html  _shortcuts_help.html  base.html
tests/: conftest.py  test_admin_actions.py  test_admin_companhias.py  test_admin_menus.py  test_admin_routes.py  test_alertas.py  test_aluno_routes.py  test_analytics.py  test_api_routes.py  test_ausencias.py  test_auth.py  test_auth_db.py  test_auth_routes.py  test_authorization.py  test_backup.py  test_backup_offsite.py  test_bootstrap.py  test_bugfixes.py  test_cmd_routes.py  test_companhias_core.py  test_config.py  test_coverage_boost.py  test_dashboard.py  test_database.py  test_detencoes.py  test_e2e_flows.py  test_exports.py  test_hardening.py  test_ical.py  (+18 more)
(+80 files in other folders)
